--- a/ar3_description/package.xml
+++ b/ar3_description/package.xml
@@ -1,4 +1,6 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>ar3_description</name>
   <version>1.0.0</version>
   <description>
@@ -9,13 +11,14 @@ for ar3 robot</p>
   <author>me</author>
   <maintainer email="chris.annin@gmail.com" />
   <license>BSD</license>
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roslaunch</build_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>rviz</run_depend>
-  <run_depend>joint_state_publisher</run_depend>
-  <run_depend>gazebo</run_depend>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+
   <export>
-    <architecture_independent />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
