--- a/ar3_description/CMakeLists.txt
+++ b/ar3_description/CMakeLists.txt
@@ -3,6 +3,7 @@ project(ar3_description)
 
 find_package(ament_cmake REQUIRED)
 
-install(DIRECTORY config launch meshes urdf DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY config gazebo launch meshes ros2_control urdf
+        DESTINATION share/${PROJECT_NAME})
 
 ament_package()
